# StarBear

./: CMakeLists.txt  README.md  TODO.txt
include/core/: ECS.hpp  Game.hpp
include/graphics/: Font.hpp  Mesh.hpp  Model.hpp  Shader.hpp  Texture.hpp  Transform.hpp
include/math/: Mat4.hpp  MathUtil.hpp  Vec3.hpp
resources/models/Bob/: Bob.mtl
resources/models/Spitfire/: Spitfire.mtl
resources/shaders/: Hitbox.frag  Hitbox.vert  Particle.frag  Particle.vert  Ship.frag  Ship.vert  TexturedMesh.frag
src/: main.cpp
src/components/: Camera.hpp  Enemy.hpp  Hitbox.hpp  Laser.hpp  Parent.hpp  ParticleEmitter.hpp  Physics.hpp  RailMover.hpp  ShipController.hpp  Transform.hpp
src/core/: ECS.hpp  EntityFactory.hpp  Game.cpp  Game.hpp  Input.hpp  ResourceMap.cpp  ResourceMap.hpp
src/graphics/: Font.cpp  Font.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/math/: Mat4.hpp  MathUtil.hpp  Vec3.hpp
src/systems/: CameraSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  EnemySystem.cpp  EnemySystem.hpp  LaserSystem.cpp  LaserSystem.hpp  ParentSystem.cpp  ParentSystem.hpp  ParticleEmitterSystem.cpp  ParticleEmitterSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RailMoverSystem.cpp  RailMoverSystem.hpp  ShipControllerSystem.cpp  ShipControllerSystem.hpp  ShipRenderSystem.cpp  ShipRenderSystem.hpp
src/util/: ECS.hpp  Observer.hpp  TransformNode.hpp
